--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
     "@tabler/icons-react": "^3.11.0",
+    "@tanstack/react-query": "^5.56.2",
     "autoprefixer": "^10.4.19",
     "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
@@ -23,6 +24,7 @@
     "framer-motion": "^11.3.19",
     "gsap": "^3.12.5",
     "hamburger-react": "^2.5.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.410.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.5",
@@ -48,6 +50,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8.4.39",
+    "prettier": "3.3.3",
     "tailwindcss": "^3.4.6",
     "typescript": "^5"
   }
